data/derived/fa15/progs/unify/prog2622.ml.out
Characters 79-86:
  else loop sumList(digitsOfInt x) + y in
            ^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
